# grabar-ocr

./: .cursorrules  .gitignore  CLAUDE.md  README.md  cut_pdf.py  pyproject.toml
data/: README.md
data_prep/: auto_slice.py  build_phase4_dataset.py  build_scaling_splits.py  column_detector.py  deskew.py  detect_nonchar_lines.py  freeze_phase4.py  layout_detector.py  line_cropper.py  line_filter.py  migrate_method_tags.py  migrate_region_names.py  pdf_slicer.py  reslice_corpus.py  sample_auto_pages.py  score_nonchar_detector.py  validate_columns.py  verify_slicing.py
docs/: human_completion_guide.md  master_blueprint.md  nonchar_detector_ui_validation.md  phase_0_micro_golden_dataset.md  phase_1_baseline_ocr.md  phase_2_alternatives.md  phase_2_local_finetune.md  phase_2b_hye_tesseract_finetune_plan.md  phase_3_trocr_finetune.md  phase_4_generalization.md  phase_5_lineslice_and_llm_correction.md  phase_5b_gemini_thinking_budget.md  phase_6_column_detection.md  slice_categorization_findings_and_next_steps.md
experiments/: gemini_budget_sweep.py
labeling_ui/: README.md  __init__.py  app.py  jobs.py  pipeline.py  storage.py
ml_vision/: requirements.txt
pipeline/: README.md  __init__.py  api.py  artifacts.py  cli.py  config.py  orchestrator.py  registry.py  scoring.py  stages.py  translate.py
reports/: digitize_page_0487_auto.md  nonchar_detector_score.csv  nonchar_detector_score.html  nonchar_detector_score.md  nonchar_flagged.csv  nonchar_flagged.html  phase2_tesseract_layout.csv  phase2_tesseract_layout.md  phase4.5_splits.html  phase4_error_analysis_frozen.csv  phase4_error_analysis_frozen.html  phase4_error_analysis_frozen_tesseract.csv  phase4_error_analysis_frozen_tesseract.html  phase4_error_analysis_frozen_tesseract_psm7.csv  phase4_error_analysis_frozen_tesseract_psm7.html  phase4_newpage_page_0400.csv  phase4_newpage_page_0400.html  phase4_newpage_page_0400_human_tesseract.csv  phase4_newpage_page_0499_human.csv  (+56 more)
(+32 files in other folders)
